cleaned analysis.ipynb

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -507,78 +507,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d4996215",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ==========================\n",
-    "# 4. FREE-ENERGY METRICS & ANALYZER\n",
-    "# ==========================\n",
-    "\n",
-    "# def compute_free_energy_from_logits(logits: torch.Tensor,\n",
-    "#                                     targets: torch.Tensor) -> torch.Tensor:\n",
-    "#     \"\"\"\n",
-    "#     logits: [N, 2]\n",
-    "#     targets: [N]\n",
-    "#     Free energy F(x,y) = -log p(y|x)\n",
-    "#     \"\"\"\n",
-    "#     probs = torch.softmax(logits, dim=1)\n",
-    "#     probs = torch.clamp(probs, min=1e-10, max=1.0)\n",
-    "#     idx = torch.arange(len(targets), device=logits.device)\n",
-    "#     true_probs = probs[idx, targets]\n",
-    "#     return -torch.log(true_probs)  # [N]\n",
-    "\n",
-    "\n",
-    "# class FreeEnergyAnalyzer:\n",
-    "#     \"\"\"\n",
-    "#     Measure & analyze free energy (surprise) for Task A vs Task B.\n",
-    "#     \"\"\"\n",
-    "\n",
-    "#     def __init__(self, model, X_tensor, y_task_a, y_task_b, device=None):\n",
-    "#         self.model = model\n",
-    "#         self.X_tensor = X_tensor\n",
-    "#         self.y_task_a = torch.LongTensor(y_task_a)\n",
-    "#         self.y_task_b = torch.LongTensor(y_task_b)\n",
-    "#         self.device = device or (torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\"))\n",
-    "#         self.model.to(self.device)\n",
-    "\n",
-    "#     def analyze_free_energy_landscape(self) -> Dict[str, np.ndarray]:\n",
-    "#         self.model.eval()\n",
-    "#         with torch.no_grad():\n",
-    "#             logits, _ = self.model(self.X_tensor.to(self.device))\n",
-    "\n",
-    "#         fe_task_a = compute_free_energy_from_logits(logits, self.y_task_a.to(self.device))\n",
-    "#         fe_task_b = compute_free_energy_from_logits(logits, self.y_task_b.to(self.device))\n",
-    "\n",
-    "#         fe_divergence = (fe_task_b - fe_task_a).mean().item()\n",
-    "#         fe_uncertainty_a = fe_task_a.std().item()\n",
-    "#         fe_uncertainty_b = fe_task_b.std().item()\n",
-    "\n",
-    "#         return {\n",
-    "#             \"mean_fe_task_a\": fe_task_a.mean().item(),\n",
-    "#             \"mean_fe_task_b\": fe_task_b.mean().item(),\n",
-    "#             \"fe_divergence\": fe_divergence,\n",
-    "#             \"fe_uncertainty_a\": fe_uncertainty_a,\n",
-    "#             \"fe_uncertainty_b\": fe_uncertainty_b,\n",
-    "#             \"fe_task_a\": fe_task_a.cpu().numpy(),\n",
-    "#             \"fe_task_b\": fe_task_b.cpu().numpy(),\n",
-    "#         }\n",
-    "\n",
-    "#     @staticmethod\n",
-    "#     def compute_alignment_score(results: Dict[str, float]) -> float:\n",
-    "#         \"\"\"\n",
-    "#         Map FE divergence to [0,1] alignment score via sigmoid:\n",
-    "#         1.0 -> strongly Task-A aligned\n",
-    "#         0.0 -> strongly Task-B aligned\n",
-    "#         ~0.5 -> neutral.\n",
-    "#         \"\"\"\n",
-    "#         divergence = results[\"fe_divergence\"]\n",
-    "#         return 1.0 / (1.0 + np.exp(-divergence * 5.0))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "02c56e6a",
    "metadata": {},
@@ -755,178 +683,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32f493b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ==========================\n",
-    "# 6. EVALUATION HELPERS\n",
-    "# ==========================\n",
-    "\n",
-    "# def evaluate_model_metrics(model,\n",
-    "#                            X_tensor,\n",
-    "#                            y_a_tensor,\n",
-    "#                            y_b_tensor,\n",
-    "#                            device) -> Dict[str, float]:\n",
-    "#     \"\"\"\n",
-    "#     Evaluate Task A/B accuracy and FE_A / FE_B for a given model\n",
-    "#     at its current LoRA strength.\n",
-    "#     \"\"\"\n",
-    "#     model.eval()\n",
-    "#     X_tensor = X_tensor.to(device)\n",
-    "#     y_a_tensor = y_a_tensor.to(device)\n",
-    "#     y_b_tensor = y_b_tensor.to(device)\n",
-    "\n",
-    "#     with torch.no_grad():\n",
-    "#         logits, _ = model(X_tensor)\n",
-    "#         preds = torch.argmax(logits, dim=1)\n",
-    "\n",
-    "#         acc_a = (preds == y_a_tensor).float().mean().item()\n",
-    "#         acc_b = (preds == y_b_tensor).float().mean().item()\n",
-    "\n",
-    "#         fe_a = compute_free_energy_from_logits(logits, y_a_tensor)\n",
-    "#         fe_b = compute_free_energy_from_logits(logits, y_b_tensor)\n",
-    "\n",
-    "#     fe_a_mean = fe_a.mean().item()\n",
-    "#     fe_b_mean = fe_b.mean().item()\n",
-    "#     fe_divergence = fe_b_mean - fe_a_mean\n",
-    "\n",
-    "#     return {\n",
-    "#         \"acc_a\": acc_a,\n",
-    "#         \"acc_b\": acc_b,\n",
-    "#         \"fe_a\": fe_a_mean,\n",
-    "#         \"fe_b\": fe_b_mean,\n",
-    "#         \"fe_div\": fe_divergence,\n",
-    "#     }\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6dc2ab6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ==========================\n",
-    "# 7. TRAIN LORA VARIANT WITH REGULARIZER \n",
-    "# ==========================\n",
-    "\n",
-    "# def train_lora_variant(\n",
-    "#     base_model: nn.Module,\n",
-    "#     X: np.ndarray,\n",
-    "#     y_task_a: np.ndarray,\n",
-    "#     y_task_b: np.ndarray,\n",
-    "#     regularizer: str = \"none\",   # \"none\", \"l1\", \"l2\", \"fe\"\n",
-    "#     lambda_reg: float = 0.1,\n",
-    "#     r: int = 4,\n",
-    "#     lr: float = 1e-3,\n",
-    "#     epochs: int = 50,\n",
-    "#     batch_size: int = 32,\n",
-    "#     test_split: float = 0.2,\n",
-    "#     device: torch.device = None,\n",
-    "# ) -> Tuple[nn.Module, pd.DataFrame]:\n",
-    "\n",
-    "#     if device is None:\n",
-    "#         device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "#     # Fresh copy of base model\n",
-    "#     base_copy = deepcopy(base_model).to(device)\n",
-    "\n",
-    "#     # Wrap with LoRA\n",
-    "#     lora_model = LoRAClassifier(base_copy, r=r).to(device)\n",
-    "\n",
-    "#     # Freeze base model\n",
-    "#     for p in lora_model.base_model.parameters():\n",
-    "#         p.requires_grad = False\n",
-    "\n",
-    "#     # During training, use full LoRA strength and keep scalar fixed\n",
-    "#     lora_model.lora_strength.data = torch.tensor(1.0, device=device)\n",
-    "#     lora_model.lora_strength.requires_grad = False\n",
-    "\n",
-    "#     # Only train the LoRA A/B weights\n",
-    "#     lora_params = list(lora_model.lora_fc3.parameters())\n",
-    "\n",
-    "#     # Optimizer (L2 via weight_decay if chosen)\n",
-    "#     if regularizer == \"l2\":\n",
-    "#         optimizer = torch.optim.Adam(lora_params, lr=lr, weight_decay=lambda_reg)\n",
-    "#     else:\n",
-    "#         optimizer = torch.optim.Adam(lora_params, lr=lr)\n",
-    "\n",
-    "#     criterion = nn.CrossEntropyLoss()\n",
-    "\n",
-    "#     # Dual-task loaders so batches include y_B and y_A\n",
-    "#     train_loader, _ = prepare_dual_task_loaders(\n",
-    "#         X, y_task_a, y_task_b, batch_size=batch_size, test_split=test_split\n",
-    "#     )\n",
-    "\n",
-    "#     # ---- Training loop ----\n",
-    "#     for epoch in range(epochs):\n",
-    "#         lora_model.train()\n",
-    "#         total_loss = 0.0\n",
-    "\n",
-    "#         for X_batch, y_b_batch, y_a_batch in train_loader:\n",
-    "#             X_batch = X_batch.to(device)\n",
-    "#             y_b_batch = y_b_batch.to(device)\n",
-    "#             y_a_batch = y_a_batch.to(device)\n",
-    "\n",
-    "#             optimizer.zero_grad()\n",
-    "#             logits, _ = lora_model(X_batch)\n",
-    "\n",
-    "#             probs = torch.softmax(logits, dim=1)\n",
-    "#             probs = torch.clamp(probs, min=1e-10, max=1.0)\n",
-    "\n",
-    "#             loss = criterion(logits, y_b_batch)  # main Task-B CE\n",
-    "\n",
-    "#             # ---- Regularizers ----\n",
-    "#             if regularizer == \"fe\":\n",
-    "#                 # FE penalty on Task A labels\n",
-    "#                 idx = torch.arange(len(X_batch), device=device)\n",
-    "#                 true_probs = probs[idx, y_a_batch]\n",
-    "#                 fe_a = -torch.log(true_probs)\n",
-    "#                 loss = loss + lambda_reg * fe_a.mean()\n",
-    "\n",
-    "#             elif regularizer == \"l1\":\n",
-    "#                 l1_penalty = 0.0\n",
-    "#                 for p in lora_model.lora_fc3.parameters():\n",
-    "#                     l1_penalty = l1_penalty + p.abs().sum()\n",
-    "#                 l1_penalty = l1_penalty + lora_model.lora_strength.abs()\n",
-    "#                 loss = loss + lambda_reg * l1_penalty\n",
-    "#             # \"none\" and \"l2\" are already handled\n",
-    "\n",
-    "#             loss.backward()\n",
-    "#             optimizer.step()\n",
-    "#             total_loss += loss.item()\n",
-    "\n",
-    "#         if (epoch + 1) % 10 == 0:\n",
-    "#             avg_loss = total_loss / len(train_loader)\n",
-    "            # print(f\"[{regularizer.upper()}] Epoch {epoch+1}/{epochs} | Loss: {avg_loss:.4f}\")\n",
-    "\n",
-    "    # # ---- Evaluation across LoRA strengths ----\n",
-    "    # X_tensor_full = torch.FloatTensor(X)\n",
-    "    # y_a_tensor_full = torch.LongTensor(y_task_a)\n",
-    "    # y_b_tensor_full = torch.LongTensor(y_task_b)\n",
-    "\n",
-    "    # strengths = [0.0, 0.2, 0.4, 0.6, 0.8, 1.0]\n",
-    "    # results = []\n",
-    "\n",
-    "    # for s in strengths:\n",
-    "    #     lora_model.lora_strength.data = torch.tensor(float(s), device=device)\n",
-    "    #     metrics = evaluate_model_metrics(\n",
-    "    #         lora_model, X_tensor_full, y_a_tensor_full, y_b_tensor_full, device\n",
-    "    #     )\n",
-    "    #     metrics.update({\n",
-    "    #         \"regularizer\": regularizer,\n",
-    "    #         \"lambda\": lambda_reg,\n",
-    "    #         \"strength\": s,\n",
-    "    #     })\n",
-    "    #     results.append(metrics)\n",
-    "\n",
-    "    # return lora_model, pd.DataFrame(results)\n"
    ]
   },
   {
@@ -1112,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "c7460a2d",
    "metadata": {},
    "outputs": [
@@ -1129,7 +885,7 @@
    ],
    "source": [
     "# ==========================\n",
-    "# 7c. Plot comparison (should match your old PDF shapes)\n",
+    "# 7b. Plot comparison (should match your old PDF shapes)\n",
     "# ==========================\n",
     "\n",
     "fig, axes = plt.subplots(1, 3, figsize=(15, 4), sharex=True)\n",
